test/src/e2e_vm_tests/test_programs/should_pass/dca/multiple_enums_same_name/src/colors2.sw
library colors2;

pub enum Colors {
	Red: (),
	Blue: ()
}
